@@ -1,0 +1,8 @@
+#!/bin/sh
+
+if [ -f $1 ]
+then
+  cat $1 >> $2
+fi
+
+exit 0
